fixed left menu overlapping issue and text peaking out under

--- a/tangelo/static/dashboard.css
+++ b/tangelo/static/dashboard.css
@@ -262,6 +262,7 @@ li > .sub-bar {
         width: 300px;
         box-shadow: 0px 1px 2px 2px #ccc;
         overflow-x: hidden;
+        overflow-y: hidden;
     }
 
     #right-sidebar-wrapper {
